--- a/css/design.css
+++ b/css/design.css
@@ -453,14 +453,15 @@
 
 .dokuwiki div.toolbar button.toolbutton {
     border-radius: 0;
-    border-right-width: 0;
+    border-left-width: 0;
+    padding: .1em .35em;
 }
 .dokuwiki div.toolbar button.toolbutton:first-child {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+    border-left-width: 1px;
 }
 .dokuwiki div.toolbar button.toolbutton:last-child {
-    border-right-width: 1px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
